// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> renders correctly 1`] = `
<DocumentFragment>
  <div
    class="chakra-radio-group css-0"
    role="radiogroup"
  >
    <label
      class="chakra-radio css-1c75yry"
    >
      <input
        class="chakra-radio__input"
        id="radio-:r1:"
        name="test-group"
        style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
        type="radio"
        value="check1"
      />
      <span
        aria-hidden="true"
        class="chakra-radio__control css-1oe91ey"
      />
      <span
        class="chakra-radio__label css-1ngpyuv"
      >
        Check1
      </span>
    </label>
    <label
      class="chakra-radio css-1c75yry"
    >
      <input
        class="chakra-radio__input"
        id="radio-:r2:"
        name="test-group"
        style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
        type="radio"
        value="check2"
      />
      <span
        aria-hidden="true"
        class="chakra-radio__control css-1oe91ey"
      />
      <span
        class="chakra-radio__label css-1ngpyuv"
      >
        Check2
      </span>
    </label>
    <label
      class="chakra-radio css-1c75yry"
    >
      <input
        class="chakra-radio__input"
        id="radio-:r3:"
        name="test-group"
        style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
        type="radio"
        value="check3"
      />
      <span
        aria-hidden="true"
        class="chakra-radio__control css-1oe91ey"
      />
      <span
        class="chakra-radio__label css-1ngpyuv"
      >
        Check3
      </span>
    </label>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<RadioGroup /> shows correctly when is checked and disabled: Using as default checked and disabled 1`] = `
<DocumentFragment>
  <div
    class="chakra-radio-group css-0"
    role="radiogroup"
  >
    <label
      class="chakra-radio css-1c75yry"
      data-disabled=""
    >
      <input
        aria-disabled="true"
        class="chakra-radio__input"
        disabled=""
        id="radio-:rd:"
        name="test-group"
        style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
        type="radio"
        value="check1"
      />
      <span
        aria-hidden="true"
        class="chakra-radio__control css-1oe91ey"
        data-disabled=""
      />
      <span
        class="chakra-radio__label css-1ngpyuv"
        data-disabled=""
      >
        Check1
      </span>
    </label>
    <label
      class="chakra-radio css-1c75yry"
      data-checked=""
      data-disabled=""
    >
      <input
        aria-disabled="true"
        checked=""
        class="chakra-radio__input"
        disabled=""
        id="radio-:re:"
        name="test-group"
        style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
        type="radio"
        value="check2"
      />
      <span
        aria-hidden="true"
        class="chakra-radio__control css-1oe91ey"
        data-checked=""
        data-disabled=""
      />
      <span
        class="chakra-radio__label css-1ngpyuv"
        data-checked=""
        data-disabled=""
      >
        Check2
      </span>
    </label>
    <label
      class="chakra-radio css-1c75yry"
      data-disabled=""
    >
      <input
        aria-disabled="true"
        class="chakra-radio__input"
        disabled=""
        id="radio-:rf:"
        name="test-group"
        style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
        type="radio"
        value="check3"
      />
      <span
        aria-hidden="true"
        class="chakra-radio__control css-1oe91ey"
        data-disabled=""
      />
      <span
        class="chakra-radio__label css-1ngpyuv"
        data-disabled=""
      >
        Check3
      </span>
    </label>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<RadioGroup /> shows correctly when is disabled: Using as disabled 1`] = `
<DocumentFragment>
  <div
    class="chakra-radio-group css-0"
    role="radiogroup"
  >
    <label
      class="chakra-radio css-1c75yry"
      data-disabled=""
    >
      <input
        aria-disabled="true"
        class="chakra-radio__input"
        disabled=""
        id="radio-:r5:"
        name="test-group"
        style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
        type="radio"
        value="check1"
      />
      <span
        aria-hidden="true"
        class="chakra-radio__control css-1oe91ey"
        data-disabled=""
      />
      <span
        class="chakra-radio__label css-1ngpyuv"
        data-disabled=""
      >
        Check1
      </span>
    </label>
    <label
      class="chakra-radio css-1c75yry"
      data-disabled=""
    >
      <input
        aria-disabled="true"
        class="chakra-radio__input"
        disabled=""
        id="radio-:r6:"
        name="test-group"
        style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
        type="radio"
        value="check2"
      />
      <span
        aria-hidden="true"
        class="chakra-radio__control css-1oe91ey"
        data-disabled=""
      />
      <span
        class="chakra-radio__label css-1ngpyuv"
        data-disabled=""
      >
        Check2
      </span>
    </label>
    <label
      class="chakra-radio css-1c75yry"
      data-disabled=""
    >
      <input
        aria-disabled="true"
        class="chakra-radio__input"
        disabled=""
        id="radio-:r7:"
        name="test-group"
        style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
        type="radio"
        value="check3"
      />
      <span
        aria-hidden="true"
        class="chakra-radio__control css-1oe91ey"
        data-disabled=""
      />
      <span
        class="chakra-radio__label css-1ngpyuv"
        data-disabled=""
      >
        Check3
      </span>
    </label>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<RadioGroup /> shows correctly when sets value by default: Using as default value 1`] = `
<DocumentFragment>
  <div
    class="chakra-radio-group css-0"
    role="radiogroup"
  >
    <label
      class="chakra-radio css-1c75yry"
    >
      <input
        class="chakra-radio__input"
        id="radio-:r9:"
        name="test-group"
        style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
        type="radio"
        value="check1"
      />
      <span
        aria-hidden="true"
        class="chakra-radio__control css-1oe91ey"
      />
      <span
        class="chakra-radio__label css-1ngpyuv"
      >
        Check1
      </span>
    </label>
    <label
      class="chakra-radio css-1c75yry"
      data-checked=""
    >
      <input
        checked=""
        class="chakra-radio__input"
        id="radio-:ra:"
        name="test-group"
        style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
        type="radio"
        value="check2"
      />
      <span
        aria-hidden="true"
        class="chakra-radio__control css-1oe91ey"
        data-checked=""
      />
      <span
        class="chakra-radio__label css-1ngpyuv"
        data-checked=""
      >
        Check2
      </span>
    </label>
    <label
      class="chakra-radio css-1c75yry"
    >
      <input
        class="chakra-radio__input"
        id="radio-:rb:"
        name="test-group"
        style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
        type="radio"
        value="check3"
      />
      <span
        aria-hidden="true"
        class="chakra-radio__control css-1oe91ey"
      />
      <span
        class="chakra-radio__label css-1ngpyuv"
      >
        Check3
      </span>
    </label>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
